--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ch.heigvd</groupId>
+    <groupId>Pongly</groupId>
     <artifactId>Pong2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -20,6 +20,14 @@
             <artifactId>picocli</artifactId>
             <version>4.7.5</version>
         </dependency>
+
+        <!-- Lanterna dependency for terminal GUI -->
+        <dependency>
+            <groupId>com.googlecode.lanterna</groupId>
+            <artifactId>lanterna</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -31,7 +39,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ch.heigvd.Main</mainClass>
+                            <mainClass>pongly.Launcher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
