WIP client/server implementation
Signed-off-by: CoJaques <91125307+CoJaques@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>pongly.Launcher</mainClass>
+                            <mainClass>pongly.client.Launcher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
