--- a/client/pom.xml
+++ b/client/pom.xml
@@ -47,5 +47,12 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Lanterna dependency for terminal GUI -->
+        <dependency>
+            <groupId>com.googlecode.lanterna</groupId>
+            <artifactId>lanterna</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 </project>
