--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>pongly</groupId>
         <artifactId>Pong2</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>common</artifactId>
